proceso civlizatorio europeo

--- a/Nietzsche/nietzsche_tardio.org
+++ b/Nietzsche/nietzsche_tardio.org
@@ -515,7 +515,216 @@ Esta actividad de interpretación y de evaluación de la voluntad como
 un proceso de digestión de la realidad por el que una fuerza crece
 alimentándose de otras fuerzas. Esta asimilación es siempre selectiva,
 empieza con un acto de discriminación de las fuerzas para asimilar
-aquellas que se estiman coo susceptibles de ser eficazmente
+aquellas que se estiman como susceptibles de ser eficazmente
 incorporadas, por su capacidad para autofortalecer y aumentar el nivel
 propio de poder, mientras que todo lo que no se estima útil para este
-fin es desestimado y desechado
+fin es desestimado y desechado.\\
+
+Con todo, Nietzsche está ensayando un manera alternativa de explicar
+el acontecer en la naturaleza tal como la que había propuesto el
+darwinismo, que entendía este acontecer como una evolución cuyo motor
+es la lucha externa regida por la necesidad de adaptación al medio y
+por el principio de la selección natural.\\
+Nietzsche acepta las tesis de lucha del darwinismo pero añade que en
+esa lucha entre las fuerzas que se confrontan no se produce según el
+esquema causa-efecto, de la determinación del medio como causa.\\
+Para Darwin, el ambiente externo y sus condiciones son los estímulos
+que producen como efectos determinísticamente las respuestas de
+adaptación de los seres vivos.\\
+Nietzsche en cambio, el movimiento no parte del medio externo, sino
+que parte de dentro de los seres vivos, que tienen constitutivamente
+un poder interior de creación de formas, de órganos, de
+funciones. Defiende un principio de autorregulación interior como
+poder propio de los seres vivos, frente al mero adaptacionismo de los
+darwinistas.\\
+
+En esta perspectiva de la voluntad de poder y a su afecto de mandar le
+es concomitante un sentimiento de placer o de displacer. El placer
+sobreviene cuando se alcanza aquello a lo que la voluntad de poder
+realmente tiende, o sea, el poder. Y que el dolor sobreviene cuando el
+poder no se consigue o se pierde.\\
+Así, este placer no es el placer provocado por el poder no por la
+posesión del poder, sino el placer que sobreviene como consecuencia de
+la percepción del aumento de poder y de la diferencia que eso marca
+frente a las otras fuerzas —el placer es un síntoma del sentimiento
+del poder alcanzado, un llegar a una consciencia de la diferencia; el
+viviente no aspira al placer, sino que el placer aparece cuando el
+viviente alcanza aquello a lo que aspira.\\
+El placer en la voluntad de poder como lucha de fuerzas es el de la
+victoria sobre otras fuerzas, victoria que hacer aumentar su propio
+poder, mientas que el dolor es el dolor de la derrota y la percepción
+de una disminución de la cantidad de poder.\\
+Pero la principal dificultad de esta caracterización radica en tener
+que admitir una explicación para las ciencias —física, química etc.—
+donde no hay manera de considerar una voluntad de poder con
+sensaciones de placer o de dolor, no con otros sentimientos
+concomitantes al aumento o a la disminución de la fuerza. La respuesta
+de N. consiste en proponer su hipótesis como un giro hacia una
+interpretación del mundo de los fenómenos desde dentro de los sujetos
+de conocimiento, en lugar de desde fuera como hace le mecanicismo, que
+serviría para hacer avanzar el saber en una dirección a la que la
+ciencia moderna se ha cerrado.\\
+
+** La nueva concepción de ciencia
+El conjunto de observaciones críticas con las que N. cuestiona la
+ciencia moderna está en su nueva concepción de lo que es ciencia y de
+lo que es un hombre de ciencia.\\
+El *hombre de ciencia* no es sino un intérprete, un filósofo cuya
+tarea principal consiste en descifrar los fenómenos naturales,
+históricos o culturales con las claves que proporciona el texto del
+cuerpo. Y esto según dos condiciones: puesto que el cuerpo interpreta,
+la salud y la enfermedad deben ser consideradas como los determinantes
+de la calidad y del valor de toda interpretación. La segunda condición
+es que en el ejercicio de la práctica interpretativa es preciso
+explicar cómo funciona y se aplica el criterio para diferenciar una
+buena de una mala interpretación. Si en lugar de la verdad-falsedad
+son la salud-enfermedad los nuevos determinantes del valor de toda
+interpretación, es obvio que será distinta la actividad interpretativa
+que brota de una voluntad de poder sana, activa. Por el contrario, la
+que es producto de la mera negación, reactiva, en la medida en que la
+conciencia no es mas que una instancia subordinada que ejecuta las
+órdenes emitidas por los impulsos y que toda nuestra actividad
+espiritual o culturas está determinada y dirigida por el dinamismo
+propio de nuestras configuraciones instintuales.\\
+
+Así pues, no hay conocimiento objetivo y desinteresado de leyes en sí
+del mundo, o de esencias existentes en un mundo inteligible. Ni
+tampoco valores en sí, sino juicios concretos de valor interiorizados
+en virtud de ese proceso de incorporación en la que consiste la
+socialización.\\
+Si las teorías científicas, los valores morales de una sociedad o de
+un individuo, no son otra cosa que la traducción de las necesidades
+propias de un organismo como cuerpo que interpreta, esto determinará
+una diferencia entre la expresión del tipo de exigencias fisiológicas
+que brotan de un cuerpo como voluntad de poder, está exigiendo una
+fisiología que no es ya la de la ciencia newtoniana. Conocer y juzgar
+de forma genealógica es ahora considerar que el suelo de la vida
+fundamenta y constituye el sentido y el valor de las opciones teóricas
+espirituales o culturales.\\
+La vida es susceptible de vivirse básicamente como salud o plenitud de
+fuerzas y como decadencia, declive o debilitamiento de las fuerzas.\\
+Por otra parte la segunda condición del arte de leer bien el cuerpo es
+lo que N. llama la *honestidad filológica*, que implica una
+transformación radical en la concepción de la verdad.\\
+Verdad ya no se entiende como la explicación correcta y adecuada de un
+texto en sí, sino como aquella clase de interpretación que cumple
+determinados requisitos de honestidad.\\
+Muchas de sus críticas a la ciencia y a la filosofía de la moral, son
+debidas a malas lecturas o incluso denuncias por la tradición entera
+de la cultura occidental.
+
+* Voluntad de poder activa y decadencia
+En la voluntad de poder, la noción de vida sana, no decadente no
+enfermedad, es voluntad de poder activa que aspira a confrontarse con
+dificultades y a superarlas. No rehuye las dificultades ni el dolor,
+sino que los afronta y los quiere como el mejor medio de crecer de
+fortalecerse y de convertirse en algo más.\\
+
+El sentimiento de bienestar y de placer como ausencia de dolor y de
+conflictos el que subyace a la concepción nietzschana de la salud,
+sino la autoafirmación como predomino de las fuerzas activas sobre las
+reactivas y como ejercicio de una voluntad de poder que aumenta
+venciendo sufrimientos y resistencias.\\
+Se deducen dos condiciones distintivas de la salud: (/i/) el poder de
+afirmar la vida en su fluir caótico, imprevisible e incontrolable sin
+temor a los aspectos dolorosos que pueda producirse y (/ii/) el poder
+de armonizar las fuerzas más opuestas sometiendo su diversidad
+conflictiva a una ley, a una unidad simple, lógica, categórica, a la
+clásica del gran estilo.\\
+
+Salud es ser lo bastante fuerte como para no retroceder ante el dolor
+de la vida, sino aprovecharlo para llegar a hacerse aún más
+fuerte. Salud es no dejarse descomponer por el caos pulsional de los
+propios instintos, sino hacerse dueño del propio caos que se es y
+construir, a partir de él, la armonía de un proyecto vital.\\
+Para N. los griegos consiguieron ambas cosas, y de ahí el valor
+modélico clásico de su cultura. Con su arte y su religión proyectaron
+sobre el fondo cruel y terrible de la vida la apariencia multicolor de
+sus dioses olímpicos apolíneos, y practicaron el orgiasmo musical
+dionisíaco. La voluntad de lo trágico es la fuerza básica de la
+autoafirmación como impulso de vida ascendente y como fuerza para la
+que el dolor actúa como un estimulante. El arte clásico, arte de la
+salud en el que lo pulsional, fuente de toda creación, es dominado por
+una ley y sometido a una forma.\\
+
+Frente a la imagen de salud, lo propio de la decadencia, como voluntad
+de poder, es una disminución de la fuerza y, por tanto, el predominio
+de un miedo al dolor en el que no se percibe ya su conexión con el
+placer. La fuerza para acrecentarse y para producir el sentimiento de
+un placer superior, tiene que esforzarse, tiene que sufrir venciendo
+resistencias y obstáculos sin los cuales no se ejercita no puede
+aumentar. Lo característico del decadente es no aceptar el dolor,
+excluir el dolor del estado creador original. La disminución de la
+fuerza, propio de la decadencia, tiene como consecuencia la
+desaparición de las condiciones de la salud.\\
+Por un lado da lugar a la negación de los aspectos terribles y
+trágicos de la vida. Por otro se mueve en medio de un cierto caos
+pulsional que no es autónomamente controlado ni sometido a ley.\\
+
+En la /genealogía de la moral/ describe los rasgos de la decadencia en
+tres ámbitos: la filosofía, la religión y la moral. Todos tres
+presididos por los ideales ascéticos inspirados en el resentimiento y
+la mala consciencia.\\
+Las objeciones de N. a la cultura dominada por estos ideales pueden
+resumirse diciendo que se ha complacido en la decadencia y se ha
+identificado con ella.\\
+
+El cristianismo, como columna vertebral de la cultura europea a lo
+largo de los siglos, es para N. el paradigma genealógico-hermenéutico
+opuesto al que ofrece la cultura griega. Ejemplificarían los dos polos
+enfrentados que marcan esa diferencia interna a la voluntad de poder
+que es el de la enfermedad y la salud.\\
+
+El cristianismo y su moral son degeneración psico-fisiológica,
+voluntad de poder reactiva, enfermedad y neurosis.\\
+Si la salud —cuyo paradigma es la cultura griega— es capacidad de
+someter a control el caos pulsional de los propios instintos, lo
+propio de la decadencia es buscar en la cultura remedio a su
+agotamiento, estimulantes o tranquilizantes.\\
+
+Nietzsche ve en la moral cristiana toda una retórica teatral, un
+constante exageración histérica animada por na intención de tiranizar
+oculta.\\
+En esto es lo que encuentra una similitud entre e cristianismo y las
+ópera de Wagner. Los dos modelos ejemplares de lo que entiende por
+decadencia.\\
+La decadencia que equivale a descontrol de los instintos, da origen a
+una sensación de miedo y de inseguridad por la incapacidad para
+controlarlos. Entonces se impone la necesidad de tiranizar, que sería
+la que habría presidido y determinado todo el proceso de culturización
+occidental que no habría consistido esencialmente en otra cosa que en
+un proceso de domesticación y desnaturalización del hombre.\\
+
+Lo criticable de la decadencia como subsuelo de la cultura occidental
+no sería la decadencia en sí, ni la enfermedad de la voluntad, que son
+una faceta de la /physis/ y del cuerpo, lo mismo que la salud. Lo
+criticable es que se la haya querido, el haberse complacido en ella y
+haberla utilizado como resorte de una tiranía que ha convertido en
+equivalentes culturización y desnaturalización.\\
+
+Para que el hombre nihilista y enfermo recupere la salud, ha de llevar
+a cabo una determinada recuperación de su mundo institucional y
+pulsional. Pero este trasfondo no es el fundamento natural del hombre,
+como su verdadera y originaria naturaleza.\\
+Los instintos o son ningún principio originario, no son la cosa-en-sí
+como fundamento de lo que el ser humano auténticamente es, de manera
+que podamos hablar de una instintividad humana que debe ser liberada
+como su verdadera naturaleza. Los instintos son la fuerza que se va
+configurando y moldeando en función de la orientación que les imprime
+la cultura, y en especial la moral.\\
+Es aqeullo más importante del comportamiento, no porque sean innatos,
+sino porque so lo que cubre el vacío de automatismo genético que
+tienen los animales.\\
+Los instintos, una vez configurados y consolidados, se convierten en
+una segunda naturaleza, dirigen el comportamiento de una manera
+espontánea anticipándose a cualquier intervención de la reflexión y de
+la consciencia. Por eso es importante se moldeado o configuración, su
+educación.\\
+
+Si esto fuese así, se podría intentar un giro e iniciar un proceso de
+reconfiguración de so instintos para que su energía resulta creativa y
+produzca en los individuos la salud en vez de la enfermedad.
+
+
+* El proceso civilizatorio europeo
+
