--- a/Nietzsche/nietzsche_tardio.org
+++ b/Nietzsche/nietzsche_tardio.org
@@ -727,4 +727,45 @@ produzca en los individuos la salud en vez de la enfermedad.
 
 
 * El proceso civilizatorio europeo
+En las obras del último Nietzsche /más allá del bien y del mal/, /la
+genealogía de la moral/ y el /crepúsculo de los ídolos/, desatacan dos
+temáticas relevantes. Por un lado, el relato de la historia de la
+domesticación del hombre europeo en a que reconstruye los
+procedimientos básicamente mnemotécnicos por los que un animal humano
+se acaba convirtiendo en una persona socializada y civilizada a la
+europea, crear un animal al que le sea lícito hacer promesas.\\
+Por otro lado, la genealogía, el origen, la fuente de la
+culpabilización y de la moral del resentimiento y de la
+represión-olvido a la que esa metodología educadora da lugar.\\
+
+Nitezsche expone como la culpa se gesta para conformar a un ser humano
+capaz de responder de sí, de prometer, de recordar lo prometido y de
+comprometerse con lo prometido. Para hacer de él un ser social
+civilizado, consciente, responsable , que recuerda las leyes y las
+cumple, en todo lo cual la memoria juega un importante papel.\\
+La culpa es entendida como obligación personal de un deudor de modo
+que la causa del dolor sea la responsabilidad.\\
+
+El problema no es tanto el de la culpa misma y la responsabilidad como
+origen de nuestra sociedad, cuanto el del origen de la culpa y la
+inversión de los valores a los que la culpabilización conduce. Ese
+origen, aquello que la genealogía busca y descubre, es el rechazo y el
+olvido de determinadas posibilidades y exigencias dela vida, estimada
+e impuestas por los promotores de esa metodología de la
+culpabilización como impresentables.\\
+El problema no es tanto como la culpa y la responsabilidad dan lugar a
+un cierto tipo de orden legal y moral, sino cómo y por qué un tipo
+específico de individuos crean una moral y una sociedad que se termina
+generalizando e imponiendo sobre la base de un determinado
+funcionamiento de la represión y el olvido, y que promueve el miedo y
+el rechazo a las fuerzas de la vitalidad natural y de los impulsos del
+cuerpo. El rechazo y el olvido reprimido de los estado corporales en
+los que la vitalidad sobreabundante de una fuerza acrecentada y
+sobrepotenciada se descarga dejando que se desborde su sobreabundancia
+de poder. El miedo a estos estado es lo que lleva a los moralizadores
+de la culpa y del resentimiento, al cristianismo, a revalorizar, a
+ensalzar y a obligar a que se recuerden constantemente como moralmente
+deseables y buenos loes estado opuestos, el debilitamiento, la
+culpabilización, el desprecio y la negación de uno mismo, la
+humanidad, etc.\\
 
